// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c12 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c3 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c5 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c13 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c15 {
  padding: 16px;
}

.c20 {
  background: #eaeaef;
}

.c22 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c23 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c29 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c31 {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  z-index: 1;
  width: 100%;
}

.c33 {
  position: relative;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c25 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c26 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c17 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c30 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #666687;
}

.c35 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c34 .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 .c8 {
  color: #ffffff;
}

.c34[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c34[aria-disabled='true'] .c8 {
  color: #666687;
}

.c34[aria-disabled='true'] svg > g,.c34[aria-disabled='true'] svg path {
  fill: #666687;
}

.c34[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c34[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c34[aria-disabled='true']:active svg > g,.c34[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c34:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c34:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c34 svg > g,
.c34 svg path {
  fill: #ffffff;
}

.c38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c38 .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c38 .c8 {
  color: #ffffff;
}

.c38[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true'] .c8 {
  color: #666687;
}

.c38[aria-disabled='true'] svg > g,.c38[aria-disabled='true'] svg path {
  fill: #666687;
}

.c38[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c38[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c38[aria-disabled='true']:active svg > g,.c38[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c38:hover {
  background-color: #f6f6f9;
}

.c38:active {
  background-color: #eaeaef;
}

.c38 .c8 {
  color: #32324d;
}

.c38 svg > g,
.c38 svg path {
  fill: #32324d;
}

.c21 {
  height: 1px;
  border: none;
  margin: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c11 svg > g,
.c11 svg path {
  fill: #8e8ea9;
}

.c11:hover svg > g,
.c11:hover svg path {
  fill: #666687;
}

.c11:active svg > g,
.c11:active svg path {
  fill: #a5a5ba;
}

.c11[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c1 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 51.875rem;
}

.c6 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c36 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c37 > * + * {
  margin-left: 8px;
}

.c16 {
  border-bottom: 2px solid #4945ff;
}

.c18 {
  border-bottom: 2px solid transparent;
}

.c14[aria-disabled='true'] {
  cursor: not-allowed;
}

.c27 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 {
  font-size: 3.75rem;
}

.c28 svg path {
  fill: #4945ff;
}

.c24 {
  border-style: dashed;
}

.c32 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c2 c3 c4"
            role="dialog"
          >
            <div
              class="c2 c5 c6"
            >
              <div
                class="c2 c7"
              >
                <h2
                  class="c8 c9"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c10 c11"
                  type="button"
                >
                  <span
                    class="c12"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c2 c13"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="tabgroup-1-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c14"
                    id="tabgroup-1-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c2 c15 c16"
                    >
                      <span
                        class="c8 c17"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c14"
                    id="tabgroup-1-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c2 c15 c18"
                    >
                      <span
                        class="c8 c19"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c2 c20 c21"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-1-0-tab"
                  id="tabgroup-1-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c2 c22"
                    >
                      <label>
                        <div
                          class="c2 c23 c24"
                        >
                          <div
                            class="c2 c25"
                          >
                            <div
                              class="c2 c26 c27"
                            >
                              <div
                                class="c28"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 24 20"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 00-.74-.55 2.214 2.214 0 00-.912-.196 2.215 2.215 0 00-.912.191 2.131 2.131 0 00-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 00-.741-.545 2.228 2.228 0 00-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 00.504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 00-.652-1.81 2.706 2.706 0 00-1.776-.87z"
                                    fill="#32324D"
                                  />
                                  <path
                                    d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585zM3.303 6.408h.826V3.997h2.477v-.793-.793H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826z"
                                    fill="#32324D"
                                  />
                                </svg>
                              </div>
                              <div
                                class="c2 c29"
                              >
                                <span
                                  class="c8 c30"
                                >
                                  Drag & Drop here or
                                </span>
                              </div>
                              <input
                                class="c2 c31 c32"
                                multiple=""
                                name="files"
                                tabindex="-1"
                                type="file"
                                width="100%"
                              />
                              <div
                                class="c2 c33"
                              >
                                <button
                                  aria-disabled="false"
                                  class="c10 c34"
                                  type="button"
                                >
                                  <span
                                    class="c8 c35"
                                  >
                                    Browse files
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="c2 c5 c36"
                    >
                      <div
                        class="c2 c7"
                      >
                        <div
                          class="c2 c26 c37"
                        >
                          <button
                            aria-disabled="false"
                            class="c10 c38"
                            type="button"
                          >
                            <span
                              class="c8 c35"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c2 c26 c37"
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c12 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c3 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c5 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c13 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c15 {
  padding: 16px;
}

.c20 {
  background: #eaeaef;
}

.c22 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c26 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c24 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c17 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c34 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: 1.14;
  color: #32324d;
}

.c27 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c30 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c25 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c25 > * + * {
  margin-top: 4px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c10 svg {
  height: 12px;
  width: 12px;
}

.c10 svg > g,
.c10 svg path {
  fill: #ffffff;
}

.c10[aria-disabled='true'] {
  pointer-events: none;
}

.c10:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c10:focus-visible {
  outline: none;
}

.c10:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c35 .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 .c8 {
  color: #ffffff;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c8 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c35:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c35 svg > g,
.c35 svg path {
  fill: #ffffff;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c33 .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 .c8 {
  color: #ffffff;
}

.c33[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true'] .c8 {
  color: #666687;
}

.c33[aria-disabled='true'] svg > g,.c33[aria-disabled='true'] svg path {
  fill: #666687;
}

.c33[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c33[aria-disabled='true']:active svg > g,.c33[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c33:hover {
  background-color: #f6f6f9;
}

.c33:active {
  background-color: #eaeaef;
}

.c33 .c8 {
  color: #32324d;
}

.c33 svg > g,
.c33 svg path {
  fill: #32324d;
}

.c21 {
  height: 1px;
  border: none;
  margin: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c11 svg > g,
.c11 svg path {
  fill: #8e8ea9;
}

.c11:hover svg > g,
.c11:hover svg path {
  fill: #666687;
}

.c11:active svg > g,
.c11:active svg path {
  fill: #a5a5ba;
}

.c11[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c11[aria-disabled='true'] svg path {
  fill: #666687;
}

.c28 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c29 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c29::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c29:focus-within {
  outline: none;
}

.c23 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c23 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c23 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c23 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c23 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c1 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: #32324d1F;
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  width: 51.875rem;
}

.c6 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c31 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c32 > * + * {
  margin-left: 8px;
}

.c18 {
  border-bottom: 2px solid #4945ff;
}

.c16 {
  border-bottom: 2px solid transparent;
}

.c14[aria-disabled='true'] {
  cursor: not-allowed;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c2 c3 c4"
            role="dialog"
          >
            <div
              class="c2 c5 c6"
            >
              <div
                class="c2 c7"
              >
                <h2
                  class="c8 c9"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c10 c11"
                  type="button"
                >
                  <span
                    class="c12"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c2 c13"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c14"
                    id="tabgroup-33-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c2 c15 c16"
                    >
                      <span
                        class="c8 c17"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="tabgroup-33-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c14"
                    id="tabgroup-33-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c2 c15 c18"
                    >
                      <span
                        class="c8 c19"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c2 c20 c21"
                />
              </div>
              <div>
                <div
                  aria-labelledby="tabgroup-33-1-tab"
                  id="tabgroup-33-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form
                    action="#"
                    novalidate=""
                  >
                    <div
                      class="c2 c22"
                    >
                      <div
                        class="c23"
                      >
                        <div>
                          <div
                            class="c2 c24 c25"
                            spacing="1"
                          >
                            <div
                              class="c2 c26"
                            >
                              <label
                                class="c8 c27"
                                for="textarea-35"
                              >
                                <div
                                  class="c2 c26"
                                >
                                  URL
                                </div>
                              </label>
                            </div>
                            <div
                              class="c28"
                            >
                              <textarea
                                aria-describedby="textarea-35-hint"
                                aria-invalid="false"
                                class="c29"
                                id="textarea-35"
                                name="urls"
                              />
                            </div>
                            <p
                              class="c8 c30"
                              id="textarea-35-hint"
                            >
                              Separate your URL links by a carriage return.
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c2 c5 c31"
                    >
                      <div
                        class="c2 c7"
                      >
                        <div
                          class="c2 c26 c32"
                        >
                          <button
                            aria-disabled="false"
                            class="c10 c33"
                            type="button"
                          >
                            <span
                              class="c8 c34"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c2 c26 c32"
                        >
                          <button
                            aria-disabled="false"
                            class="c10 c35"
                            type="submit"
                          >
                            <span
                              class="c8 c34"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
